Bug 81933 - EDITING: "Slide" panel will switch to slide one when right clicking to insert a new slide.
Summary: EDITING: "Slide" panel will switch to slide one when right clicking to insert...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: David Tardon
URL:
Whiteboard: BSA target:4.4.0 target:4.3.2
Keywords: bibisected, regression
: 83123 83281 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-07-31 00:16 UTC by minhsien0330
Modified: 2015-12-17 10:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The procedure (96.39 KB, image/png)
2014-07-31 00:16 UTC, minhsien0330
Details
The file to show this bug. (13.79 KB, application/vnd.oasis.opendocument.presentation)
2014-07-31 00:17 UTC, minhsien0330
Details

Note You need to log in before you can comment on or make changes to this bug.
Description minhsien0330 2014-07-31 00:16:17 UTC
Created attachment 103705 [details]
The procedure

Problem description: 
Slide panel will switch to slide one when I want to insert a slide between slide 9 and 10.
Please take a look at attachment "procedure.png".

Steps to reproduce:
1. Open the attachment(insert_problem.odp) with LO  4.3.0.
2. Click slide 9 on "Slides" panel.
3. Right click on the space between slide 9 and 10 to insert a new slide, then the "Slides" panel switches to slide 1.

Current behavior:
Right click on the space between slide 9 and 10 to insert a new slide, then the "Slides" panel switches to slide 1.

Expected behavior:
Right click on the space between slide 9 and 10 to insert a new slide, the "Slides" panel should stay on slide 9.

Operating System: Debian
Version: 4.3.0.3 rc
Last worked in: 4.2.5.2 release
Comment 1 minhsien0330 2014-07-31 00:17:23 UTC
Created attachment 103706 [details]
The file to show this bug.
Comment 2 ign_christian 2014-08-01 08:50:40 UTC
Thanks for the clear & simple steps.. Funny bug :)

Reproduced with: LO 4.3.0.0.beta1, 4.3.1.0.0+ Time: 2014-07-30_10:54:10

Not reproduced with: LO 4.2.6.2
Comment 3 ign_christian 2014-08-01 08:51:24 UTC
Tested on Ubuntu 12.04 x86
Comment 4 David Tardon 2014-08-11 13:04:37 UTC
# bad: [a92705c1fabafddd43d175a0714855cd22551232] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [6ab7f53af36f13bbefdd4e4fcbd3d1ea432a77d9] source-hash-22029c7e17b4cb48acb058d47ec9c3b6b8b6b294
git bisect start 'master' 'oldest'
# bad: [bebf9d31c8fe9de96798484288a0fffc4d54917d] source-hash-09e5de8278dd8f13adcf614db35c8a8a04ba8e47
git bisect bad bebf9d31c8fe9de96798484288a0fffc4d54917d
# good: [20d42d26a12e5ded00b3510d2d9e254e7876dc78] source-hash-c1503da35d8879366da13258837cf0084a536809
git bisect good 20d42d26a12e5ded00b3510d2d9e254e7876dc78
# good: [ee737773fc09a037b061b9ef349add52f78873c7] source-hash-e414cdbf3321d579537b372d815d50c31195ecc3
git bisect good ee737773fc09a037b061b9ef349add52f78873c7
# good: [cd007b9a029269821da9bc7863a4d09d7dd778bb] source-hash-8be2cbc856fb5ba61203872d8f01ed8162aa4256
git bisect good cd007b9a029269821da9bc7863a4d09d7dd778bb
# skip: [2ef9044e7d6bc0e2802ca9be7a99d86597e9600d] source-hash-54ce662d3043fc0b892d8f000a6f5877e32b7325
git bisect skip 2ef9044e7d6bc0e2802ca9be7a99d86597e9600d
# bad: [758475d5d691988914e118a4b3cec12b50dd6497] source-hash-5c57c9b6eb30265fe7312ff2b4d6ce7363cf2006
git bisect bad 758475d5d691988914e118a4b3cec12b50dd6497
# skip: [9ac341d090555e1200a0e13c3ea05c13cb9e2776] source-hash-93f3f72d18e551c8edd6a010cb78d9cbe404f8ef
git bisect skip 9ac341d090555e1200a0e13c3ea05c13cb9e2776
# bad: [f958da7d65895116cf754e90255464baab60f002] source-hash-334e99c08214563bb208448d1045f95e664d4c3e
git bisect bad f958da7d65895116cf754e90255464baab60f002
# bad: [2772e940dd191da542c9ffdf135f4deec28cfa41] source-hash-6e38e82b7ce2aeb3d7628ad518437c9af6eec0a8
git bisect bad 2772e940dd191da542c9ffdf135f4deec28cfa41
# skip: [20167b09e12c8f8420831abf4562aae13c0f8f3b] source-hash-278409c3f175b562453c8a7a0e139eadfe41ba11
git bisect skip 20167b09e12c8f8420831abf4562aae13c0f8f3b
# bad: [938125094ed914174993e86f4e6c1ad8c69d0b40] source-hash-fedebb269e815a3475cefc21556031e09bb3f35e
git bisect bad 938125094ed914174993e86f4e6c1ad8c69d0b40
# good: [b1deb854adc279d67e91a678fc440ae7db87c80e] source-hash-fec7d941d06b651013a8c08fa5128beacbad637d
git bisect good b1deb854adc279d67e91a678fc440ae7db87c80e
# only skipped commits left to test
# possible first bad commit: [938125094ed914174993e86f4e6c1ad8c69d0b40] source-hash-fedebb269e815a3475cefc21556031e09bb3f35e
# possible first bad commit: [20167b09e12c8f8420831abf4562aae13c0f8f3b] source-hash-278409c3f175b562453c8a7a0e139eadfe41ba11

 commit 938125094ed914174993e86f4e6c1ad8c69d0b40
 Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
 Date:   Sun May 11 16:42:02 2014 +0000
 
     source-hash-fedebb269e815a3475cefc21556031e09bb3f35e
     
     commit fedebb269e815a3475cefc21556031e09bb3f35e
     Author:     Caolán McNamara <caolanm@redhat.com>
     AuthorDate: Sat Feb 22 21:04:50 2014 +0000
     Commit:     Caolán McNamara <caolanm@redhat.com>
     CommitDate: Sun Feb 23 03:28:22 2014 +0000
     
         coverity#704988 Dereference after null check
     
         Change-Id: I641f9cf087cb2cd7f26daa70c886f174a8404ba9

 commit 20167b09e12c8f8420831abf4562aae13c0f8f3b
 Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
 Date:   Sun May 11 16:29:23 2014 +0000
 
     source-hash-278409c3f175b562453c8a7a0e139eadfe41ba11
     
     commit 278409c3f175b562453c8a7a0e139eadfe41ba11
     Author:     Stephan Bergmann <sbergman@redhat.com>
     AuthorDate: Fri Feb 21 23:36:09 2014 +0100
     Commit:     Stephan Bergmann <sbergman@redhat.com>
     CommitDate: Fri Feb 21 23:47:21 2014 +0100
     
         Allow building compilerplugins/clang on Mac OS X
     
         (at least against a self-built Clang configured --enable-keep-symbols)
     
         Change-Id: I6e38688c78f78aca1864530042159cdcef7a0694
Comment 5 David Tardon 2014-08-11 13:11:21 UTC
The only suspicious commit in that range is:

 commit ad0c4bf5790546242884da0c2ec281f2db9e14a0
 Author: Andre Fischer <af@apache.org>
 Date:   Fri Feb 21 11:55:33 2014 +0000
 
     Related: #i123197# Fixed selection problems when switching...
     
     between normal and master mode.
     
     (cherry picked from commit 163d414311b0c8bcb1b0ad7c7cbf364e0ad4e4c4)
     
     Change-Id: Ibabee4c67367c367a9ce1c5afffa76efa3f66bd7
Comment 6 Commit Notification 2014-08-11 14:50:16 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=904fdac93b072cc5295cce0360f47926f049e6ea

fdo#81933 do not select 1st slide unconditionally



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-08-11 15:59:53 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=57de7defc7baf03b0ae3574fa453009f201a2fd1&h=libreoffice-4-3

fdo#81933 do not select 1st slide unconditionally


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 minhsien0330 2014-08-12 01:14:28 UTC
To ign_christian:
Thanks for your confirming. :)

To David Tardon:
Thanks for your help. :)

Regards, 
Minhsien0330
Comment 9 ign_christian 2014-08-31 02:35:38 UTC
*** Bug 83281 has been marked as a duplicate of this bug. ***
Comment 10 ign_christian 2014-08-31 02:36:45 UTC
*** Bug 83123 has been marked as a duplicate of this bug. ***
Comment 11 ign_christian 2014-08-31 02:37:50 UTC
Verify fixed with:

Version: 4.3.2.0.0+
Build ID: 266a9536b5abf4c36fed1785ae657da923bbbb8d
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-4-3, Time: 2014-08-29_03:57:12
Comment 12 Robinson Tryon (qubit) 2015-12-17 10:52:23 UTC Comment hidden (obsolete)