fdo#81933 do not select 1st slide unconditionally

This is a regression from commit
ad0c4bf5790546242884da0c2ec281f2db9e14a0 . But I do not see why this
code would be needed for that either.

Change-Id: Ied3a5d25b2bec9542aa83c4d7fa36ed5313fc797